@@ -11,6 +11,6 @@ use Test::NoWarnings;
 my $obj = Acme::CPANAuthors->new('Czech');
 my @ret = $obj->id;
 my @right_ret = ('DANPEDER', 'HIHIK', 'HPA', 'JANPAZ', 'JANPOM', 'JENDA',
-	'JSPICAK', 'KLE', 'MAJLIS', 'MILSO', 'MJFO', 'PAJAS', 'PEK', 'RUS',
-	'RVASICEK', 'SKIM', 'TKR', 'TRIPIE', 'ZOUL');
+	'JSPICAK', 'KLE', 'MAJLIS', 'MILSO', 'MJFO', 'PAJAS', 'PASKY', 'PEK',
+	'RUS', 'RVASICEK', 'SKIM', 'TKR', 'TRIPIE', 'ZOUL');
 is_deeply(\@ret, \@right_ret, 'CPAN authors ids.');
